--- a/Cloud-storing/pages/css/mobile.css
+++ b/Cloud-storing/pages/css/mobile.css
@@ -13,11 +13,14 @@
 
 */
 
-.logo{
+.logo-mobile{
     background-image: url('../../source/logo/DataBase.png');
     background-size: cover;
-    height: 30px;
-    width: 30px;
+    width: max(40px, 20%);
+    height: max(50px, 10vh);
+    position: absolute;
+    left: calc(100vw/2);
+    transform: translateX(-50%);
 }
 
 @media (max-width: 400px){
@@ -26,8 +29,29 @@
         background-size: cover;
         width: 30px;
         height: 30px;
-        opacity: 50%;
+        position: absolute;
+        right: 10px;
+        top: 20px;
     }
 
+    .nav_buttons{
+        position: fixed;
+        top: 100px;
+        left: calc(100vw/2);
+        transform: translateX(-50px);
+        row-gap: 10px;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #ffff;
+        padding: 10px 0px;
+    }
 
+    .buttons{
+        border: 0px;
+        font: bold 1em 'consolas';
+        background-color: #00F5FF;
+        width: 100px;
+        height: 25px;
+        border-radius: 5px;
+    }
 }
